--- a/modules/ext.OpenSemanticLab/TileGrid2.css
+++ b/modules/ext.OpenSemanticLab/TileGrid2.css
@@ -60,8 +60,7 @@
 
 .custom-link-tile2_btn {
   text-align: center;
-  display: table-row;
-  vertical-align: bottom;
+  margin-top: auto;
   height: 50px;
 }
 
@@ -79,6 +78,8 @@
   border: 1px solid rgba(255, 255, 255, 0.2);
   background: transparent;
   background-image: none !important;
+  /* Fix iOS Safari not rendering button text */
+  -webkit-appearance: none;
 }
 
 .custom-link-tile2_btn a:hover {
@@ -143,7 +144,9 @@
   height: 100%;
   padding: 1rem;
   background: linear-gradient(to bottom left, #14866d 40%, #2a4b8d 100%);
-  display: table;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .custom-link-tile2_content a{
